force-app/main/default/objects/Lead/fields/Customer_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customer_Detail__c</fullName>
    <label>Customer Detail</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>