force-app/main/default/objects/Lead/fields/UserDetail__c.field-meta.xml
<CustomField>
    <fullName>UserDetail__c</fullName>
    <label>UserDetail</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>